fix dark mode

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -400,7 +400,7 @@ strong {
   bottom: 0;
   transition: 0.3s;
   cursor: pointer;
-  background: theme("colors.dark");
+  background: theme("colors.beige.dark");
   border-radius: 20px;
 }
 
